[gd_scene load_steps=13 format=3 uid="uid://cm536f8skr2u7"]

[ext_resource type="Script" uid="uid://p6qhq02pi6vs" path="res://scenes/hud/menus/structure_selector/structure_selector.gd" id="1_spbsv"]
[ext_resource type="PackedScene" uid="uid://cw6d8vrpjdgvr" path="res://scenes/structures/utils/structure_button_selector/structure_button_selector.tscn" id="2_58278"]
[ext_resource type="Texture2D" uid="uid://pxl12ftos16w" path="res://assets/hud/buttons/close/normal.png" id="2_fm0tj"]
[ext_resource type="Texture2D" uid="uid://k422vn41uv2n" path="res://assets/hud/structures/preview/basic_planting_land/normal.png" id="2_y1752"]
[ext_resource type="Texture2D" uid="uid://beig2xvf5k3vj" path="res://assets/hud/buttons/close/hover.png" id="3_6gvub"]
[ext_resource type="Texture2D" uid="uid://xo06jak7egq8" path="res://assets/hud/structures/preview/basic_planting_land/hover.png" id="3_d6e1o"]
[ext_resource type="Texture2D" uid="uid://bv17dmupbb0y3" path="res://assets/hud/structures/preview/basic_planting_land/disabled.png" id="4_58278"]
[ext_resource type="Texture2D" uid="uid://ci7lx2bvatr12" path="res://assets/hud/structures/preview/basic_planting_land/gigant.png" id="5_d6e1o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f7apu"]
bg_color = Color(0.972549, 0.94902, 0.803922, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.941176, 0.890196, 0.592157, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="FontVariation" id="FontVariation_noof5"]
variation_opentype = {
2003072104: 100,
2003265652: 700
}

[sub_resource type="LabelSettings" id="LabelSettings_y1752"]
font = SubResource("FontVariation_noof5")
font_size = 64
font_color = Color(0.243137, 0.121569, 0.0392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58278"]
draw_center = false
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.941176, 0.890196, 0.592157, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="StructureSelector" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spbsv")
metadata/_custom_type_script = "uid://do43ysgv1h455"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.456771
anchor_top = 0.431481
anchor_right = 0.543229
anchor_bottom = 0.568519
offset_left = -460.0
offset_top = -410.0
offset_right = 460.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f7apu")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ConsTruye"
label_settings = SubResource("LabelSettings_y1752")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.121569, 0.0392157, 1)
theme_override_font_sizes/font_size = 24
text = "Siembra"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/GridContainer" instance=ExtResource("2_58278")]
layout_mode = 2
texture_normal = ExtResource("2_y1752")
texture_hover = ExtResource("3_d6e1o")
texture_disabled = ExtResource("4_58278")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_58278")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Terreno de Siembra BÃ¡sico"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("5_d6e1o")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.243137, 0.121569, 0.0392157, 1)
bbcode_enabled = true
text = "Hello world"

[node name="ScrollContainer2" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Seleccionar"

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 511.0
offset_top = -500.0
offset_right = 559.0
offset_bottom = -452.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_fm0tj")
texture_hover = ExtResource("3_6gvub")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
